<?xml version="1.0"?>
<package format="2">
  <name>moveo_moveit</name>
  <version>0.3.0</version>
  <description>The Moveo_moveit package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jesse.weisberg@gmail.com">Jesse Weisberg</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <!-- Author tags are optional, multiple are allowed, one pe_r tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_core</depend>

  <depend>message_generation</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>interactive_markers</depend>
  <depend>geometric_shapes</depend>
  <depend>moveit_visual_tools</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
